write the schema

--- a/database/Makefile
+++ b/database/Makefile
@@ -20,6 +20,12 @@ ps:
 clean:
 	docker-compose down -v
 
+check:
+	docker exec -it $(POSTGRES_CONTAINER) psql -U $(POSTGRES_USER) -d $(POSTGRES_DB) -c "\dt"
+
+health:
+	docker exec -it $(POSTGRES_CONTAINER) pg_isready -U $(POSTGRES_USER)
+
 bash-db:
 	docker exec -it $(POSTGRES_CONTAINER) bash
 
