--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   postgres:
     image: postgres:16
@@ -12,9 +10,9 @@ services:
     ports:
       - "${POSTGRES_PORT}:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data          # persistent DB storage
-      - ./init:/docker-entrypoint-initdb.d              # schema auto-init
-      - postgres_backups:/backups                       # for pg_dump backups
+      - ./data/postgres:/var/lib/postgresql/data          # persistent DB data on disk
+      - ./init:/docker-entrypoint-initdb.d                # schema init scripts
+      - ./data/backups:/backups                           # optional: backup folder inside container
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
@@ -32,7 +30,3 @@ services:
       - "${PGADMIN_PORT}:80"
     depends_on:
       - postgres
-
-volumes:
-  postgres_data:
-  postgres_backups:
