--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
     ports:
       - "${POSTGRES_PORT}:5432"
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data          # persistent DB data on disk
-      - ./init:/docker-entrypoint-initdb.d                # schema init scripts
-      - ./data/backups:/backups                           # optional: backup folder inside container
+      - ./database/data/postgres:/var/lib/postgresql/data
+      - ./database/init:/docker-entrypoint-initdb.d
+      - ./database/data/backups:/backups
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
