--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: postgres:16
-    container_name: ${POSTGRES_CONTAINER}
+    container_name: service_db
     restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
@@ -21,7 +21,7 @@ services:
 
   pgadmin:
     image: dpage/pgadmin4
-    container_name: ${PGADMIN_CONTAINER}
+    container_name: service_pgadmin
     restart: always
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
@@ -30,3 +30,37 @@ services:
       - "${PGADMIN_PORT}:80"
     depends_on:
       - postgres
+
+  dashboard:
+    build:
+      context: .              # <─ Dockerfile.app is in root
+      dockerfile: Dockerfile.app
+    container_name: service_dashboard_laravel
+    restart: unless-stopped
+    working_dir: /var/www/html
+    volumes:
+      - ./dashboard:/var/www/html   # <─ Laravel files will appear here on host
+    environment:
+      APP_ENV: local
+      APP_DEBUG: "true"
+      APP_URL: http://localhost:8000
+      DB_CONNECTION: pgsql
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_DATABASE: ${POSTGRES_DB}
+      DB_USERNAME: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+    depends_on:
+      - postgres
+
+  nginx:
+    image: nginx:latest
+    container_name: service_dashboard_nginx
+    restart: unless-stopped
+    ports:
+      - "8000:80"
+    volumes:
+      - ./dashboard:/var/www/html
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - dashboard
